--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/date-picker": "^2.3.16",
+    "@heroui/input": "^2.4.16",
+    "@heroui/number-input": "^2.0.6",
+    "@heroui/radio": "^2.3.15",
+    "@heroui/react": "^2.7.5",
+    "@heroui/select": "^2.4.16",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
@@ -18,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "next": "15.1.6",
     "pg": "^8.14.0",
