--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroui/radio": "^2.3.15",
     "@heroui/react": "^2.7.5",
     "@heroui/select": "^2.4.16",
+    "@heroui/toast": "^2.0.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
