--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.16",
+    "@heroui/card": "^2.2.15",
     "@heroui/date-picker": "^2.3.16",
+    "@heroui/divider": "^2.2.11",
+    "@heroui/image": "^2.2.10",
     "@heroui/input": "^2.4.16",
+    "@heroui/link": "^2.2.13",
     "@heroui/number-input": "^2.0.6",
     "@heroui/radio": "^2.3.15",
     "@heroui/react": "^2.7.5",
     "@heroui/select": "^2.4.16",
+    "@heroui/tabs": "^2.2.13",
     "@heroui/toast": "^2.0.6",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-label": "^2.1.2",
